--- a/benchmarks/mjit.html
+++ b/benchmarks/mjit.html
@@ -36,6 +36,19 @@
 <div class='benchmark_graph' data-values='[24.024,23.067,26.157,31.177,22.7,22.195]' id='awrite'></div>
 <div class='benchmark_graph' data-values='[24.512,25.395,25.481,24.013,21.751,21.69]' id='call'></div>
 <div class='benchmark_graph' data-values='[62.097,58.026,62.018,68.15,60.267,57.594]' id='const2'></div>
+<div class='benchmark_graph' data-values='[62.192,58.346,62.178,94.749,59.026,58.663]' id='const'></div>
+<div class='benchmark_graph' data-values='[36.095,35.943,37.022,36.302,36.246,36.183]' id='fannk'></div>
+<div class='benchmark_graph' data-values='[30.087,28.17,31.218,24.841,25.515,21.716]' id='fib'></div>
+<div class='benchmark_graph' data-values='[26.401,23.977,27.178,26.438,24.556,23.222]' id='ivread'></div>
+<div class='benchmark_graph' data-values='[18.807,17.264,16.143,17.065,18.155,16.832]' id='ivwrite'></div>
+<div class='benchmark_graph' data-values='[23.178,24.11,24.323,25.192,26.1,28.866]' id='mandelbrot'></div>
+<div class='benchmark_graph' data-values='[19.98,19.598,20.391,19.053,20.335,19.813]' id='meteor'></div>
+<div class='benchmark_graph' data-values='[21.113,20.728,20.81,21.626,20.962,20.238]' id='nbody'></div>
+<div class='benchmark_graph' data-values='[25.292,25.697,26.958,25.513,24.914,25.786]' id='nest-ntimes'></div>
+<div class='benchmark_graph' data-values='[19.209,18.218,17.705,19.106,18.111,17.72]' id='nest-while'></div>
+<div class='benchmark_graph' data-values='[21.836,21.891,22.062,21.235,20.054,20.327]' id='norm'></div>
+<div class='benchmark_graph' data-values='[25.212,25.171,23.551,20.194,25.575,25.952]' id='nsvb'></div>
+<div class='benchmark_graph' data-values='[19.855,19.245,20.347,20.333,20.163,18.755]' id='red-black'></div>
 </div>
 <script>
   $(function () {
