--- a/benchmarks/mjit.html
+++ b/benchmarks/mjit.html
@@ -49,6 +49,9 @@
 <div class='benchmark_graph' data-values='[21.836,21.891,22.062,21.235,20.054,20.327]' id='norm'></div>
 <div class='benchmark_graph' data-values='[25.212,25.171,23.551,20.194,25.575,25.952]' id='nsvb'></div>
 <div class='benchmark_graph' data-values='[19.855,19.245,20.347,20.333,20.163,18.755]' id='red-black'></div>
+<div class='benchmark_graph' data-values='[26.211,21.026,20.935,21.228,20.42,20.648]' id='sieve'></div>
+<div class='benchmark_graph' data-values='[10.997,10.768,11.301,11.112,9.843,9.591]' id='trees'></div>
+<div class='benchmark_graph' data-values='[26.19,23.982,24.645,26.433,25.96,23.144]' id='while'></div>
 </div>
 <script>
   $(function () {
