--- a/benchmarks.html
+++ b/benchmarks.html
@@ -31,14 +31,18 @@
 <table class='benchmarks-table table table-striped'>
 <thead>
 <tr>
-<th>Name</th>
+<th>Results</th>
 <th>Description</th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td><a href="/benchmarks/mjit.html">MJIT</a></td>
+<td><a href="/benchmarks/mjit_releases.html">MJIT: Ruby Releases</a></td>
 <td>Benchmark set created by Vladimir Makarov</td>
+</tr>
+<tr>
+<td><a href="/benchmarks/optcarrot_commits.html">Optcarrot: Ruby Commits</a></td>
+<td>Benchmark created by Yusuke Endoh</td>
 </tr>
 </tbody>
 </table>
@@ -50,6 +54,9 @@
 <p class='text-muted'>
 Developed by <a href="https://github.com/k0kubun">@k0kubun</a>.
 See the source code at <a href="#">https://github.com/benchmark-driver/benchmark-driver.github.io</a>.
+<br>
+This is built to test edge features of benchmark_driver.gem, not to compete with RubyBench.
+I'm planning to propose merging benchmark sets to RubyBench later.
 </p>
 </div>
 </footer>
