--- a/index.html
+++ b/index.html
@@ -151,10 +151,10 @@ Experimental benchmark result viewer for benchmark-driver
 <div class='container text-center'>
 <p class='text-muted'>
 Developed by <a href="https://github.com/k0kubun">@k0kubun</a>.
-See the source code at <a href="#">https://github.com/benchmark-driver/benchmark-driver.github.io</a>.
+See the source code at <a href="https://github.com/benchmark-driver/benchmark-driver.github.io">https://github.com/benchmark-driver/benchmark-driver.github.io</a>.
 <br>
 This is built to test edge features of benchmark_driver.gem.
-You may want to see <a href="#">https://rubybench.org</a> as well.
+You may want to see <a href="https://rubybench.org">https://rubybench.org</a> as well.
 </p>
 </div>
 </footer>
